--- a/reports/eda-searches.Rmd
+++ b/reports/eda-searches.Rmd
@@ -18,9 +18,8 @@ theme_set(theme_bw())
 buscas = read_csv(here::here("data/search_data.csv"))
 ```
 
-```{r}
-buscas %>% 
-    ggplot(aes(x = results)) + 
-    geom_histogram(binwidth = 5) 
-```
-
+## What is our daily overall clickthrough rate? How does it vary between the groups?
+## Which results do people tend to try first? How does it change day-to-day?
+## What is our daily overall zero results rate? How does it vary between the groups?
+## Let session length be approximately the time between the first event and the last event in a session. Choose a variable from the dataset and describe its relationship to session length. Visualize the relationship.
+## Summarize your findings in an executive summary.
